--- a/static/pages/links.html
+++ b/static/pages/links.html
@@ -29,7 +29,7 @@
       <legend>Links</legend>
       <p class="title">ここにあなたが楽しむかもしれない他のサイトへのいくつかのリンクがあります。</p>
       <ul>
-        <li><a href="https://gitgud.io/8chan/Aleph">Aleph</a>, the
+        <li><a href="https://gitgud.io/Tsar/Modchan">Modchan</a>, the
           repository for this front-end.</li>
         <li><a href="https://gitgud.io/LynxChan">LynxChan</a>, the
           repository for LynxChan.</li>
