--- a/static/pages/about.html
+++ b/static/pages/about.html
@@ -28,7 +28,7 @@
     <fieldset class="titleFieldset">
       <legend>情報</legend>
 		    <h3>このサイトは何ですか？</h3>
-		    <p>モッドちゃんねるでは、経験やプログラミングの知識がなくても、独自の画像掲示板や掲示板を無料で作成できます。</p>
+		    <p>モッドちゃんねるを使用すると、プログラミングの知識がなくても、無料で独自の掲示掲示板を作成できます。</p>
 		    <br />
 		    <h3>サイトの所有者に連絡するにはどうすればよいですか？</h3>
 		    <p>公式の<a href="/.static/pages/contact.html">接触</a>ページをご覧ください。</p>
