--- a/static/pages/advertisement.html
+++ b/static/pages/advertisement.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>広告枠問い合わせ</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -24,40 +25,15 @@
   </header>
 
   <div class="titleWrapper">
-
     <fieldset class="titleFieldset">
-
-      <legend>グラフ</legend>
-
-      <form
-        method="get"
-        action="graphs.js">
-
-        <label>
-          年：
-          <input
-            type="text"
-            name="year"
-            placeholder="YYYY">
-        </label>
-
-        <input
-          type="submit"
-          value="検索">
-
-      </form>
-
-      <hr />
-
-      <div
-        id="divDates"
-        class="linkList"></div>
-
+      <legend>広告枠問い合わせ</legend>
+	  ビジネスに関するお問い合わせ
+	  <ul>
+	  <li><a href="mailto:modadmin@protonmail.com">モッドちゃんねる管理</a>
+	  </ul>
     </fieldset>
-
   </div>
   <footer id="dynamicFooter"></footer>
-
 </body>
 
 <script src="/.static/js/api.js"></script>
