--- a/static/pages/donate.html
+++ b/static/pages/donate.html
@@ -40,19 +40,14 @@
         暗号を購入し、寄付する最も簡単な方法は、<a href="https://www.binance.com/ja">Binanceです。</a>その主要なソフトウェアとその無料です。アトミックウォレットをインストールして起動し、「Buy Crypto」を選択し、下記の3つのオプションの中から寄付金額相当のものを通常のカードかPaypalで購入します（該当する場合）。アプリを起動し、「Send」を選択し、選んだ暗号のアドレスを貼り付けてください。ビットコインは最も簡単です。
 		    <br />
 		    <br />
-		    ビットコインアドレス：<a href="">3DBxMyPA885vW8ByHLpLDhNVjaCS2c73du</a>
+		    ビットコイン：<a href="">3DBxMyPA885vW8ByHLpLDhNVjaCS2c73du</a>
 		    <hr id="postingHr"><br>
-		    イーサリアムアドレス：<a href="">0x7E2314e838314B0eE167E5504919a0Af62164104</a>
+		    イーサリアム：<a href="">0x7E2314e838314B0eE167E5504919a0Af62164104</a>
                     <hr id="postingHr"><br>
-                    カルダノアドレス：<a href="">addr1vye4uhydvxn8d833zw30ruv8xenlfpa55v34fs4d7v5zffqz4sxf6</a>
+                    モネロ：<a href="">47gupNYZu7E9G8MXF7Jbvv1G16rf7DSC43gHBDzQheb9C2Rynp8TGQ1RMytJLbRyccJQvwuawTBCxNvF3mGwjq8W1j8KDms</a>
                     <hr id="postingHr"><br><br>
-                    また、このWebサイトのベースとなっているLynxChanおよび8chanの開発者にも感謝します。<br><br>つき - モッドちゃんねる管理者<br>
         <br />
         <br />
-        ビジネスに関するお問い合わせ
-		    <ul>
-			<li><a href="mailto:modadmin@protonmail.com">モッドちゃんねる管理</a>
-		    </ul>
     </fieldset>
 
   <footer id="dynamicFooter"></footer>
