--- a/static/pages/legal.html
+++ b/static/pages/legal.html
@@ -27,7 +27,7 @@
   <div class="titleWrapper">
     <fieldset class="titleFieldset">
       <legend>法的</legend>
-    このサイトとその管理者は、ユーザーが私たちのプラットフォームに投稿する内容について責任を負いません。 米国およびコロンビアの法律に従い、誠意を持って違法であると信じるコンテンツを削除するために誠意を持って努力します。 個人、特にアメリカ合衆国の法律に違反してコンテンツを投稿するために当サイトを使用することはできません。 このサイトを閲覧することにより、このページのすべての条項に同意し、サイトのグローバルルールを順守することに同意し、さらにこのサイトのスタッフ、所有者、管理者、およびボランティアを無害に保ち、可能な限り補償することに同意するものとします。 作成、投稿、共有、体験、ダウンロード、実行、またはその他の方法で公開されるすべてのコンテンツについて、法律で許可されている範囲。</br></br>
+    このサイトとその管理者は、ユーザーが私たちのプラットフォームに投稿する内容について責任を負いません。 米国およびコロンビアの法律に従い、誠意を持って違法であると信じるコンテンツを削除するために誠意を持って努力します。 個人、特にアメリカ合衆国の法律に違反してコンテンツを投稿するために当サイトを使用することはできません。 このサイトを閲覧することにより、このページのすべての条項に同意し、サイトの規約を順守することに同意し、さらにこのサイトのスタッフ、所有者、管理者、およびボランティアを無害に保ち、可能な限り補償することに同意するものとします。 作成、投稿、共有、体験、ダウンロード、実行、またはその他の方法で公開されるすべてのコンテンツについて、法律で許可されている範囲。</br></br>
     あなたは、このサイトがあなたのコンピュータのハードウェアまたはソフトウェアにリスクをもたらす可能性のあるクッキー、ジャバスクリプト、およびその他の機能を利用する可能性があることに同意します。 このサイトのスタッフ、ボランティア、および管理者は、通知の有無にかかわらず、理由の如何を問わず、上訴の有無にかかわらず、独自の裁量により、このWebサイトまたはそのサービスへのアクセスを個人または団体に拒否する権利を留保します。 このウェブサイト上のすべての商標および著作権は、このサイトの所有者または管理者からの請求なしに、それぞれの当事者によって所有されています。 アップロードされたメディアと投稿されたコメントは、投稿者の責任です。 このサイトに投稿された見解や意見は、サイト管理者やスタッフの見解や意見を表すものではありません。
 		    <br />
 		    <br />
