--- a/static/pages/posting.html
+++ b/static/pages/posting.html
@@ -71,7 +71,7 @@
 
 	  <hr>
       <h3>Quote</h3>
-      <p>&gt;&gt; と書くと 次に、投稿に番号を付けると、投稿しているボードにこの投稿へのリンクが作成され、JavaScriptが有効になっている場合は、投稿のプレビューにツールチップが追加されます。</p>
+      <p>&gt;&gt; と書くと 次に、投稿に番号を付けると、投稿している掲示板にこの投稿へのリンクが作成され、JavaScriptが有効になっている場合は、投稿のプレビューにツールチップが追加されます。</p>
       <br>
       <p>例：</p>
       <p>
@@ -82,8 +82,8 @@
       <br>
 
 	  <hr>
-      <h3>ボードリンク</h3>
-      <p>&gt;&gt;&gt; と書くと 次に、スラッシュの間にボード名を追加すると、ボードへのリンクが作成されます。</p>
+      <h3>掲示板リンク</h3>
+      <p>&gt;&gt;&gt; と書くと 次に、スラッシュの間に掲示板名を追加すると、掲示板へのリンクが作成されます。</p>
       <br>
       <p>例：</p>
       <p>
@@ -97,7 +97,7 @@
 
 	  <hr>
       <h3>クロスクォート</h3>
-      <p>別のボードからの投稿を引用することも可能です。 ボード名の後に投稿番号を追加するだけです。</p>
+      <p>別の掲示板からの投稿を引用することも可能です。 掲示板名の後に投稿番号を追加するだけです。</p>
       <br>
       <p>例：</p>
       <p>
@@ -213,8 +213,8 @@
     </table>
 
     <hr>
-    <h3>ボード固有のタグ</h3>
-    <p>次のタグは、ボードごとに有効になっています。</p>
+    <h3>掲示板固有のタグ</h3>
+    <p>次のタグは、掲示板ごとに有効になっています。</p>
     <table>
 		  <tr><th>前：</th><th>後：</th></tr>
           <tr><td>
