--- a/static/pages/globalRules.html
+++ b/static/pages/globalRules.html
@@ -50,8 +50,7 @@
                 <li>ユーザーは、サードパーティのツールやスクリプトの使用を含め、サイトまたはその機能に損害を与えるいかなる活動も禁じられています。 これには、スパム、フラッディング、フィッシング、サイコプス、ハッキング、サービス拒否やその他の攻撃、
                   <br>
                   ボットプログラムやその他の無許可のソフトウェアが含まれますが、これらに限定されません。</li>
-                <li>わいせつではないとマークされた掲示板の場合、ほとんどの場合、16歳以上である必要があります。 Nわいせつではないとマークされた掲示板の場合、18歳以上である必要があります。</li>
-                <li>それが台無しにされない限り、わいせつではないマークの付いた掲示板にNわいせつではない素材を投稿しないでください。違反者は一時的に禁止され、投稿が削除される場合があります。</li>
+                <li>わいせつではないとマークされた掲示板の場合、ほとんどの場合、16歳以上である必要があります。 「閲覧注意」と記された掲示板の場合、18歳以上である必要があります。</li>
 
                 </ol>
 		規約によってグローバルスタッフに委任されていない、または取締役会の所有者に禁止されていない権限は、それぞれ取締役会の所有者またはユーザーに留保されます。
