--- a/static/pages/moderation.html
+++ b/static/pages/moderation.html
@@ -136,7 +136,7 @@
 <br>
 <b>新しいスレッドには少なくとも1つのファイルが必要です。</b> 投稿者が新しいスレッドを作成するときに、少なくとも 1 つのファイルを含めるように強制します。
 <br>
-<b>テキスト掲示掲示板：</b> <i>すべての</i>ファイル種類を掲示掲示板に投稿できないようにします。これはある種のスパムを処理するのに役立ちます。
+<b>テキスト掲示板：</b> <i>すべての</i>ファイル種類を掲示掲示板に投稿できないようにします。これはある種のスパムを処理するのに役立ちます。
 <br>
 <b>ユーザーによる投稿の削除をブロックします。</b> デフォルトでは、ユーザーはどんな理由でも自分の投稿を削除することができます。この機能を無効にして、ボランティアだけが削除できるようにします。
 <br>
